<resources>
    <string name="app_name">Meetit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mail">florent.martin02@edu.univ-fcomte.fr</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="data">Data</string>
    <string name="map">Map</string>
    <string name="credits">Credits</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credits_content">Credits: IUT-BM, LP Mobilité Numérique, 2017</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_delay_default_value">100</string>
    <string name="search_delay_title">Search delay</string>
    <string name="location_enabled_title">Location enabled</string>
    <string name="search_radius_default_value">10</string>
    <string name="search_radius_title">Search radius</string>
    <string name="location_enabled_key">location_enabled</string>
    <string name="search_delay_key">search_delay</string>
    <string name="search_radius_key">search_radius</string>
    <string name="pref_location_switch">Location enabled:</string>
    <string name="pref_search_delay">Search delay:</string>
    <string name="pref_search_radius">Search radius:</string>
    <string name="number_of_characters">Number of characters:</string>
    <string name="location_enabled_default_value">false</string>
</resources>
